--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
                 {{ post.created_date }}
             </div>
             <h1><a href="{% url 'post_detail' pk=post.pk %}" target="_blank">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <p>{{ post.text|safe|linebreaksbr }}</p>
         </div>
     {% endfor %}
 {% endblock %}
